# anixart-desktop

./: .editorconfig  .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  client.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/lottie/: 14.json  2.json
src/components/CachedMedia/: CachedMedia.css  CachedMedia.tsx
src/components/DevAddressBar/: DevAddressBar.css  DevAddressBar.tsx
src/components/FriendsContent/: FriendsContent.css  FriendsContent.tsx
src/components/LoadingSpinner/: LoadingSpinner.css  LoadingSpinner.tsx
src/components/Navbar/: Navbar.css  Navbar.tsx
src/components/TitleBar/: TitleBar.css  TitleBar.tsx
src/contexts/: RPCContext.tsx
src/hooks/: useAuth.ts
src/routes/: Home.css  Home.tsx  InitScreen.css  InitScreen.tsx
src/routes/About/: About.css  About.tsx
src/routes/Bookmarks/: Bookmarks.tsx
src/routes/Discover/: Discover.tsx
src/routes/Feed/: Feed.tsx
src/routes/Home/: Home.tsx
src/routes/InitScreen/: InitScreen.css  InitScreen.tsx
src/routes/Login/: Login.css  Login.tsx
src/routes/Profile/: Profile.tsx  UserProfile.css  UserProfile.tsx
src/routes/Settings/: Settings.css  Settings.tsx
src/routes/UpdatePage/: UpdatePage.css  UpdatePage.tsx
src/types/: rpc.ts
src/utils/: pingServer.ts  settingsStore.ts  updateChecker.ts
