[package]
name = "anixart-desktop"
version = "0.0.1"
description = "Unofficial Anixart (https://anixart-app.com) port for PC"
authors = ["Taskov1ch <sudo.taskov1ch@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anixart_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
lazy_static = "1.4"
discord-rich-presence = "0.2.3"
sha2 = "0.10"
dirs = "5.0"
mime_guess = "2.0.5"
tauri-plugin-process = "2"
